@@ -182,10 +182,37 @@ class SubNavigationSource(SimpleContextualXMLSource):
         return metadata.ressort
 
 
-class ProductSource(XMLSource):
+class Product(object):
+
+    def __init__(self, id=None, title=None, vgwortid=None):
+        self.id = id
+        self.title = title
+        self.vgwortid = vgwortid
+
+    def __eq__(self, other):
+        if not isinstance(other, self.__class__):
+            return False
+        return self.id == other.id
+
+
+class ProductSource(
+    SimpleXMLSourceBase,
+    zc.sourcefactory.contextual.BasicContextualSourceFactory):
 
     config_url = 'source-products'
-    attribute = 'id'
+
+    def getValues(self, context):
+        tree = self._get_tree()
+        return [Product(unicode(node.get('id')),
+                        unicode(node.text.strip()),
+                        unicode(node.get('vgwortid')))
+                for node in tree.iterchildren()]
+
+    def getTitle(self, context, value):
+        return value.title
+
+    def getToken(self, context, value):
+        return super(ProductSource, self).getToken(context, value.id)
 
 
 class CMSContentTypeSource(zc.sourcefactory.basic.BasicSourceFactory):
